--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1;
+  margin: 0;
 }
 
 textarea {
@@ -10,7 +11,6 @@ textarea {
   resize: none;
   color: #000000;
   border-left: 1px solid black;
-  padding: 10px;
 }
 
 .jumbotron {
@@ -41,7 +41,7 @@ textarea {
   color: #000000;
   border-top: 1px dashed #000000;
 }
-
+/* 
 .past {
   background-color: #d3d3d3;
   color: white;
@@ -55,7 +55,7 @@ textarea {
 .future {
   background-color: #77dd77;
   color: white;
-}
+} */
 
 .saveBtn {
   border-left: 1px solid black;
@@ -63,9 +63,38 @@ textarea {
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  height: 54px;
+  margin: 0px;
 }
 
-.saveBtn i:hover {
+.saveBtn:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.times {
+  border-top-style: dotted;
+  border-bottom-style: dotted;
+  border-width: 1px;
+  padding: 10px;
+  align-items: center;
+  height: 54px;
+  margin: 0;
+}
+
+.form-control {
+  height: 54px;
+  color: white;
+}
+
+.form-control:hover {
+  box-shadow: 0px 2px 10px;
+  display: block;
+  transition: 0.15s ease-in-out;
+}
+.input-group {
+  margin: 0;
+}
+.mb-3 {
+  margin: 0;
 }
